most done except datacompinents and networking